<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    tools:context=".ui.RegistrationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/density_pixel_40">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/density_pixel_20"
            android:layout_marginEnd="@dimen/density_pixel_20"
            android:layout_marginTop="@dimen/density_pixel_10"
            android:textColor="@color/black_app"
            android:fontFamily="@font/gilroy_semi_bold"
            android:text="@string/get_otp"
            android:textSize="@dimen/scale_independent_pixel_20" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/density_pixel_20"
            android:layout_marginTop="@dimen/density_pixel_10"
            android:layout_marginEnd="@dimen/density_pixel_20"
            android:textColor="@color/black_app"
            android:fontFamily="@font/gilroy_extra_bold"
            android:text="@string/enter_your"
            android:textSize="@dimen/scale_independent_pixel_30" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/density_pixel_20"
            android:layout_marginTop="@dimen/density_pixel_10"
            android:layout_marginEnd="@dimen/density_pixel_20"
            android:fontFamily="@font/gilroy_extra_bold"
            android:textColor="@color/black_app"
            android:text="@string/phone_number"
            android:textSize="@dimen/scale_independent_pixel_30" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/otp_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gilroy_extra_bold"
                android:layout_marginStart="@dimen/density_pixel_20"
                android:layout_weight="2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/country_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gilroy_extra_bold"
                    android:inputType="number|phone"
                    android:maxLength="3"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone_number_Layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/density_pixel_20"
                android:layout_marginEnd="@dimen/density_pixel_20"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phone_number"
                    android:layout_width="match_parent"
                    android:fontFamily="@font/gilroy_extra_bold"
                    android:layout_height="wrap_content"
                    android:inputType="number|phone" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2" />
        </LinearLayout>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/continue_registration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/density_pixel_20"
            android:layout_marginTop="@dimen/density_pixel_10"
            android:layout_marginBottom="@dimen/density_pixel_10"
            android:text="@string/continue_1"
            android:textAlignment="center"
            android:textColor="@color/black_app"
            app:backgroundTint="#FFD600" />


    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>