<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.OTPValidationFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/density_pixel_40">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/otp_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/density_pixel_20"
                android:layout_marginTop="@dimen/density_pixel_10"
                android:fontFamily="@font/gilroy_semi_bold"
                android:text="@string/_91_9562673169"
                android:textColor="@color/black_app"
                android:textSize="@dimen/scale_independent_pixel_20" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/density_pixel_5"
                app:srcCompat="@drawable/ic_baseline_edit_24" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/density_pixel_20"
            android:layout_marginTop="@dimen/density_pixel_10"
            android:layout_marginEnd="@dimen/density_pixel_20"
            android:textColor="@color/black_app"
            android:fontFamily="@font/gilroy_extra_bold"
            android:text="@string/enter_the_n_otp"
            android:textSize="@dimen/scale_independent_pixel_30" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/otp_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gilroy_extra_bold"
                android:layout_marginStart="@dimen/density_pixel_20"
                android:layout_weight="2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/otp_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gilroy_extra_bold"
                    android:inputType="number|phone"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:textSize="@dimen/scale_independent_pixel_30"
                android:layout_height="wrap_content"
                android:layout_weight="2" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/continue_otp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/density_pixel_20"
                android:layout_marginTop="@dimen/density_pixel_10"
                android:layout_marginBottom="@dimen/density_pixel_10"
                android:text="@string/continue_1"
                android:textAlignment="center"
                android:textColor="@color/black_app"
                app:backgroundTint="#FFD600" />
            <TextView
                android:id="@+id/timer_for_otp"
                android:layout_width="0dp"
                android:fontFamily="@font/gilroy_extra_bold"
                android:layout_marginStart="@dimen/density_pixel_10"
                android:layout_marginEnd="@dimen/density_pixel_10"
                android:text="00:30"
                android:textColor="@color/black_app"
                android:textSize="@dimen/scale_independent_pixel_30"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2" />
        </LinearLayout>



    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>